2008-11-07  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.24.1.1 release

2008-10-21  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.24.1 release and version
	bump.

2008-10-14  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-summary.c: Include camel-db.h

2008-10-06  Srinivasa Ragavan  <sragavan@novell.com>

	* camel/camel-exchange-folder.c (class_init),
	(count_by_expression): Adapt to new camel ABI

2008-09-22  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-folder (camel_exchange_folder_add_message):
	Remove unused variables unread_count and visible_count.

2008-09-22  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS, configure.in: Evolution Exchange 2.24.0 release

2008-09-15  Bharath Acharya  <abharath@novell.com>

	** Part of fix for bug #552013

	* camel/camel-exchange-folder.c
	(camel_exchange_folder_add_message): Just update the count when adding 
	messages. Also fixes the deadlock reported.

2008-09-12  Bharath Acharya  <abharath@novell.com>

	** Fix for bug #546972

	* camel/camel-exchange-folder.c: (refresh_info),
	(camel_exchange_folder_add_message):
	* camel/camel-stub-constants.h:
	* mail/mail-stub-exchange.c: (class_init),
	(refresh_folder_internal), (sync_count):
	* mail/mail-stub.c: (connection_handler):
	* mail/mail-stub.h: 
	Added SYNC_COUNT to sync up counts on the operations needed. Any 
	operations that need syncing could just update the counts from mfld-> 
	counts maintained at the mail side. So Camel could just pick it up from
	there.

2008-09-08  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.92 release.

2008-09-05  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #550160

	* addressbook/e-book-backend-gal.c: (func_contains):
	Be able to search for "Name contains" like queries.

2008-09-01  Srinivasa Ragavan  <sragavan@novell.com>

	* NEWS: Evolution Exchange 2.23.91 release and version bump.
